fix: changed overflow direction

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  @apply h-full overflow-scroll bg-k-primary;
+  @apply h-full overflow-y-auto bg-k-primary;
 }
 
 @layer base {
